--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -47,6 +48,50 @@
             android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="260dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="260dp"
+            android:layout_marginTop="64dp"
+            android:background="@drawable/ic_private_button"
+            android:contentDescription="asdf"
+            android:maxHeight="68dp"
+            android:maxWidth="62dp"
+            android:minHeight="66dp"
+            android:minWidth="61dp"
+            android:onClick="onPrivateClicked"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="72dp"
+            android:background="@drawable/ic_pinwheel"
+            android:contentDescription="asdf"
+            android:maxHeight="68dp"
+            android:maxWidth="62dp"
+            android:minHeight="66dp"
+            android:minWidth="61dp"
+            android:onClick="onPostClicked"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+
 
     </android.support.constraint.ConstraintLayout>
 
