--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
 
             android:layout_marginTop="70dp"
             android:background="@drawable/ic_post_btn"
-
+            android:onClick="onPostClicked"
             android:contentDescription="asdf"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
