--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,16 +70,16 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="72dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="72dp"
             android:background="@drawable/ic_pinwheel"
             android:contentDescription="asdf"
-            android:maxHeight="68dp"
             android:maxWidth="62dp"
-            android:minHeight="66dp"
+            android:maxHeight="68dp"
             android:minWidth="61dp"
-            android:onClick="onPostClicked"
+            android:minHeight="66dp"
+            android:onClick="onWindmillClicked"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toStartOf="@+id/imageButton2"
             app:layout_constraintTop_toTopOf="parent" />
